[project]
name = "streamlit-my-secret-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "extra-streamlit-components>=0.1.81",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "streamlit-authenticator>=0.4.2",
]
